@@ -219,6 +219,7 @@ void ObjectMoleculeCreateSpheroid(ObjectMolecule *I,int average);
 int ObjectMoleculeSetAtomVertex(ObjectMolecule *I,int state,int index,float *v);
 int ObjectMoleculeVerifyChemistry(ObjectMolecule *I);
 int ObjectMoleculeFillOpenValences(ObjectMolecule *I,int index);
+int ObjectMoleculeGetTotalAtomValence(ObjectMolecule *I,int atom);
 int ObjectMoleculeAdjustBonds(ObjectMolecule *I,int sele0,int sele1,int mode,int order);
 void ObjectMoleculeAttach(ObjectMolecule *I,int index,AtomInfoType *nai);
 void ObjectMoleculeFuse(ObjectMolecule *I,int index0,ObjectMolecule *src,int index1,int mode);
